# NMEA0183

./: .gitignore  CMakeLists.txt  mwv.cpp  nmea0183.cpp  nmea0183.h  nmea0183.hpp
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt  debug.sh  test.cpp
test/Debug/: CMakeCache.txt  Makefile  Test  cmake_install.cmake
